--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/DEV_JAVA/re/ojdbc8-21.8.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
